# make-it-submit

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/platform/: mod.rs  windows.rs
public/r9x/k4q/: 0f7c9a2d.whp  7e03d9b4.whp  91bd0e4f.whp  a24f0c79.whp  c6a82190.whp
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  windows.rs
src-tauri/src/platform/: macos.rs  windows.rs
